# oop-labs

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  main.cpp  task.cpp  task.h  tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: money.h
lab2/src/: money.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h  figure_array.h  point.h  rectangle.h  square.h  trapezoid.h  utils.h
lab3/src/: figure.cpp  figure_array.cpp  point.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt
lab4/include/: figure.h  figure_array.h  rectangle.h  square.h  trapezoid.h
lab5/: CMakeLists.txt
lab5/include/: allocator.h  vector.h
lab5/tests/: tests.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: bear.h  elf.h  elf_.h  npc.h  rogue.h
lab6/src/: bear.cpp  elf.cpp  elf_.cpp  npc.cpp  rogue.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: bear.h  elf_.h  npc.h  rogue.h
lab7/src/: bear.cpp  elf_.cpp  rogue.cpp
